--- a/oper.html
+++ b/oper.html
@@ -7,5 +7,23 @@
 </head>
 <body>
     Операционные системы
+     <h2>Десктопные</h2>
+    <p>Microsoft Windows</p>
+    <p>macOS</p>
+    <p>Linux</p>
+
+    <h2>Мобильные ОС</h2>
+    <p>Google Android</p>
+    <p>Apple iOS</p>
+    <p>KaiOS</p>
+    <P>Huawei HarmonyOS</P>
+
+    <h2>Серверные ОС</h2>
+    <p>Windows Server</p>
+    <p>Ununtu Server</p>
+    <p>CentOS</p>
+    <p>Red Hat Enterprise Linux</p>
+
+   
 </body>
 </html>
