--- a/oper.html
+++ b/oper.html
@@ -9,6 +9,7 @@
     Операционные системы
      <h2>Десктопные</h2>
     <p>Microsoft Windows</p>
+    <a href="windows.html">windows</a>
     <p>macOS</p>
     <p>Linux</p>
 
@@ -24,6 +25,6 @@
     <p>CentOS</p>
     <p>Red Hat Enterprise Linux</p>
 
-   
+    
 </body>
 </html>
